--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -95,7 +95,7 @@
 {% block content %}
 <div class="menu-section">
     <h2>List of Venue</h2>
-    <div style="margin-bottom: 15px;">
+    <div class="button-wrapper">
         <button id="generatePDF">Export Table to PDF</button>
     </div>
     <div class="user-table-container">
