--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -94,9 +94,11 @@
 
 {% block content %}
 <div class="menu-section">
-    <h2>List of Venue</h2>
-    <div class="button-wrapper">
-        <button id="generatePDF">Export Table to PDF</button>
+    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">
+        <h2 style="margin: 0;">List of Venue</h2>
+        <div class="button-wrapper">
+            <button id="generatePDF">Export Table to PDF</button>
+        </div>
     </div>
     <div class="user-table-container">
         <table class="user-data-table"> 
