--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -94,9 +94,9 @@
 
 {% block content %}
 <div class="menu-section">
-    <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">
-        <h2 style="margin: 0;">List of Venue</h2>
-        <div class="button-wrapper">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <h2>List of Venue</h2>
+        <div class="button-wrapper" style="background-color: black;">
             <button id="generatePDF">Export Table to PDF</button>
         </div>
     </div>
