--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -96,8 +96,8 @@
 <div class="menu-section">
     <div style="display: flex; justify-content: space-between; align-items: center;">
         <h2>List of Venue</h2>
-        <div class="button-wrapper" style="background-color: black;">
-            <button id="generatePDF">Export Table to PDF</button>
+        <div class="button-wrapper">
+            <button id="generatePDF" style="background-color: black;">Export Table to PDF</button>
         </div>
     </div>
     <div class="user-table-container">
